  - export alias files instead of item values
  - export to CSV/TSV, HTML, XML
* nk2info

Test:
* add autoconf/make test suite

Beta release
* have automated test suite
* remove deprecated functions in libnk2_legacy.[ch]
* remove deprecated definition in include/libnk2/mapi.h
* update man pages
* add documentation
* check inclusion of local libraries

Bindings:
* .net
* java

20141019
* changes for deployment

20141001
* removed README.macosx
* removed examples
* changes for project site move

20140723
* worked on dpkg debug packages support
* fixed small memory leaks

20140324
* 2014 update
* updated dependencies

20130923
* updated msvscpp files
* worked on tests
* fixed support for codepages 949, 950, 1255

20130922
* updated dependencies

20130414
* updated dependencies
* textual changes

20130121
* 2013 update
* nk2export: added item file
* added API functions for item file
* updated dependencies
* updated macosx PackageMaker files
* updated msvscpp files
* bug fix in libnk2_item_get_entry_value_utf16_string API definition

20121112
* updated dependencies

20120826
* updated dependencies

20120522
* updated dependencies

20120102
* 2012 update
* added codepage windows 932 and 936 support

20111030
* updated configure.ac and m4 files
* updated common, libsystem, libfdatetime, libfvalue
* changes for libfvalue updates

20111007
* updated README
* updated libfdatetime
* updated msvscpp files for libfdatetime

20111006
* removed acinclude.m4

20111005
* updated configure.ac and m4 files
* code clean up

20111004
* updated configure.ac and m4 files
* updated README files
* updated spec file
* updated pc file

20111003
* updated configure.ac
* updated common, array type, libsystem, libuna, libbfio, libfdatetime, libfmapi, libfvalue
* code clean up

20110727
* updated manuals

20110717
* implemented an alternative solution for sizeof( size_t ) == 8 ?

20110706
* code clean up
* updated msvscpp files, added VSDebug
* updated nk2tools/log_handle.[ch]