@@ -23,10 +23,12 @@ example_filename2: "Outlook1.NK2"
 directory: "nk2tools"
 names: ["nk2export", "nk2info"]
 
+[troubleshooting]
+example: "nk2info Outlook.NK2"
+
 [cygwin]
 build_dependencies: []
-dll_dependencies: [
-    "*TODO describe dependencies*"]
+dll_dependencies: []
 dll_filename: "cygnk2-0.dll"
 
 [gcc]
@@ -35,8 +37,7 @@ static_build_dependencies: []
 
 [mingw]
 build_dependencies: []
-dll_dependencies: [
-    "*TODO describe dependencies*"]
+dll_dependencies: []
 dll_filename: "libnk2-1.dll"
 
 [msvscpp]
