@@ -40,6 +40,10 @@ Bindings:
 * .net
 * java
 
+20141024
+* changes for deployment
+* changes for project site move
+
 20141019
 * changes for deployment
 
